--- a/src/assets/icons/demo.html
+++ b/src/assets/icons/demo.html
@@ -12,39 +12,36 @@
         <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;20)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 20</h1>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-menu"></span>
-                <span class="mls"> icon-menu</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e900" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe900;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-close"></span>
-                <span class="mls"> icon-close</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e901" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe901;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
-    </div>
-    <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-suit-heart"></span>
+                <span class="mls"> icon-suit-heart</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e90a" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe90a;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-wght400_GRAD0_opsz48"></span>
+                <span class="mls"> icon-wght400_GRAD0_opsz48</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e906" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe906;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-setting"></span>
                 <span class="mls"> icon-setting</span>
@@ -58,7 +55,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-location"></span>
                 <span class="mls"> icon-location</span>
@@ -72,7 +69,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-money"></span>
                 <span class="mls"> icon-money</span>
@@ -86,7 +83,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-Calender-2"></span>
                 <span class="mls"> icon-Calender-2</span>
@@ -100,21 +97,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-clock"></span>
-                <span class="mls"> icon-clock</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e906" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe906;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-delete"></span>
                 <span class="mls"> icon-delete</span>
@@ -128,7 +111,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-calender"></span>
                 <span class="mls"> icon-calender</span>
@@ -142,7 +125,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-delete-white"></span>
                 <span class="mls"> icon-delete-white</span>
@@ -156,21 +139,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-harts"></span>
-                <span class="mls"> icon-harts</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e90a" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe90a;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-log-out"></span>
                 <span class="mls"> icon-log-out</span>
@@ -184,7 +153,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-manage-studio"></span>
                 <span class="mls"> icon-manage-studio</span>
@@ -198,7 +167,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-profile"></span>
                 <span class="mls"> icon-profile</span>
@@ -212,7 +181,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-search"></span>
                 <span class="mls"> icon-search</span>
@@ -226,7 +195,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-Vector-2"></span>
                 <span class="mls"> icon-Vector-2</span>
@@ -240,7 +209,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-mic"></span>
                 <span class="mls"> icon-mic</span>
@@ -254,7 +223,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-calender-3"></span>
                 <span class="mls"> icon-calender-3</span>
@@ -268,7 +237,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-Artist"></span>
                 <span class="mls"> icon-Artist</span>
@@ -282,7 +251,7 @@
                 <input type="text" readonly value="" class="liga unitRight" />
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
                 <span class="icon-Studio"></span>
                 <span class="mls"> icon-Studio</span>
@@ -290,6 +259,37 @@
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e913" class="unit size1of2" />
                 <input type="text" maxlength="1" readonly value="&#xe913;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+    </div>
+    <div class="clearfix mhl ptl">
+        <h1 class="mvm mtn fgc1">Grid Size: 20</h1>
+        <div class="glyph fs2">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-menu"></span>
+                <span class="mls"> icon-menu</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e900" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe900;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-close"></span>
+                <span class="mls"> icon-close</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e901" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe901;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
